--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         <div class="education-block" style="background: #fff;">
             <h3>North Carolina State University</h3>
             <span class="education-date">August 2017 - Present</span>
-            <h4>Master of Computer Science, CGPA = 3.39</h4>
+            <h4>Master of Computer Science</h4>
             <ul>
                 <li>
                     Completed two semesters in the computer science department at NCSU. 
@@ -135,7 +135,7 @@
         <div class="education-block" style="background: #fff;">
             <h3>University of Mumbai</h3>
             <span class="education-date">Jul 2013 - May 2017</span>
-            <h4>Bachelor of Science in Electronics Engineering, CGPA = 3.63</h4>
+            <h4>Bachelor of Science in Electronics Engineering</h4>
             <ul>
                 <li>
                     Successfully graduated with consistent perfomance throughtout the 4 years.
