--- a/index.html
+++ b/index.html
@@ -73,17 +73,20 @@
                         Pursuing Masters' in Computer Science at North Carolina State University.
                     </p> 
                     <p>
-                        I have varied interests ranging from Networking Technologies to Software Development, but I'm especially enthusiastic about Artificial Intelligence/Machine Learning development and building Data Analytic applications. I believe in building technology that empowers mankind leading to a smarter and better future.
+                       I'm versatile and inquisitive mind engineer with a passion for application development and Machine Learning problem solving. I believe in building technology that empowers mankind leading to a smarter and better future.
                     </p>
                     <p>
-                        I'm a self motivated software engineer with an inquisitive mind. I like to lead with example and seek challenges that push me beyond my limits, helping me evolve as an Engineer as well as a human being.
+                        I'm proficient with Python and worked on multiple machine learning projects to enhance my understanding of the field. I am familiar with multiple machine learning, deep learning and statistical analysis libraries like scikit-sklearn, keras, tensorflow, OpenCV, pandas, and numpy. 
+                    </p>
+                    <p>
+                        Looking for Full-Time opportunites in Software Development, Machine Learning, or Data Analytics. 
                     </p>
                     <p>
                         Apart from Technology, my passion dwells in Photography, Writing and Traveling. I love to interact with people from various cultures, of different countries and sharing experiences as I believe there's something to learn from every experience.
                     </p>
 
                     <p>
-                        You can connect with me through my social media accounts shown below..
+                        You can connect with me through my social media accounts shown below.
                     </p>
 
                     <div class="row">
@@ -155,17 +158,32 @@
         <h2 class="heading">Skills</h2>
         <div class="row skillRow">
             <div class="col-md-3 skillTitle">
-                Programming
+                Programming Languages
             </div>
             <div class="col-md-9 skillTiles">
                 <ul>
                     <li>Python</li>
                     <li>Java</li>
+                    <li>SQL</li>
                     <li>MATLAB</li>
                 </ul>
             </div>
         </div>
-       
+       <div class="row skillRow">
+            <div class="col-md-3 skillTitle ">
+                Packages
+            </div>
+            <div class="col-md-9 skillTiles">
+                <ul>
+                    <li>NumPy</li>
+                    <li>Pandas</li>
+                    <li>Scikit-sklearn</li>
+                    <li>TensorFlow</li>
+                    <li>Keras</li>
+                    <li>OpenCV</li>
+                </ul>
+            </div>
+        </div>
         <div class="row skillRow">
             <div class="col-md-3 skillTitle ">
                 Web Technology
@@ -210,6 +228,18 @@
                 </ul>
             </div>
         </div>
+         <div class="row skillRow">
+            <div class="col-md-3 skillTitle ">
+                Operating Systems
+            </div>
+            <div class="col-md-9 skillTiles">
+                <ul>
+                    <li>MacOS</li>
+                    <li>Linux</li>
+                    <li>Windows</li>
+                </ul>
+            </div>
+        </div>
     </div>
     <!-- End #skills -->
 
@@ -222,7 +252,6 @@
                 <h3>Multi-Label Classification of Satellite Images using CNN</h3>
                 <h4>Python, CNN, Keras  <a href="https://github.com/Aayush1710/Conv-Nets-for-Multi-label-classification" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a> </h4>
                 <p>
-
                     • Designed 4 CNN models namely Resnet-50, Baseline, VGG-16, and Inception, using transfer learing, to perform multi label classification of Amazon satellite images with 17 feature labels like clear, hazy, cloudy, etc.
                     <br> 
                     • Added additional layers and adjusted hyperparameters to increase the efficiency of the baseline model. 
