--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
                 <a href="#education">Education</a>
             </li>
             <li>
+                <a href="#projects">Experience</a>
+            </li>
+            <li>
                 <a href="#experience">Projects</a>
             </li>
             <li>
@@ -126,10 +129,10 @@
             <h4>Master of Computer Science</h4>
             <ul>
                 <li>
-                    Completed two semesters in the computer science department at NCSU. 
+                    Completed three semesters in the Computer Science department at NCSU. 
                 </li>
                 <li>
-                    Successfully undertook and finished coursework involving core topics of Algorithms, Database Mangement, Artifictial Intelligence, and Software Engineering
+                    Successfully undertook and finished coursework involving core topics of Algorithms, Operating Systems, Data Analysis, Database Mangement, Artifictial Intelligence, and Software Engineering
                 </li>
             </ul>
         </div>
@@ -171,7 +174,7 @@
         </div>
        <div class="row skillRow">
             <div class="col-md-3 skillTitle ">
-                Packages
+                Python Packages
             </div>
             <div class="col-md-9 skillTiles">
                 <ul>
@@ -205,7 +208,6 @@
                 <ul>
                     <li>MySQL</li>
                     <li>PostgeSQL</li>
-                    <li>MariaDB</li>
                     <li>MongoDB</li>
 
                 </ul>
@@ -243,12 +245,66 @@
     </div>
     <!-- End #skills -->
 
-   
+<div id="projects" class="background-alt">
+        <h2 class="heading">Experience</h2>
+        <div id="experience-timeline">
+            <div data-date="August 2018 – December 2018">
+                <h3>Graduate Reasearch Assistant</h3>
+                <h4> North Carolina State University </h4>
+                <p>
+                    • Analysed MRI images of pediatric cancer subjects for features with a goal of developing a model to segment and localize tumor from the images.
+                    <br>
+                    • Studied the Facebook Detectron Model and Mask RCNN architecture for segmenting tumor from generated grayscale masks and regernate them on the MRI from the model.
+                </p>
+            </div>
 
-<div id="experience" class="background-alt">
+        <div id="experience-timeline">
+            <div data-date="July 2015 – June 2016">
+                <h3>General Secretary</h3>
+                <h4> Sardar Patel Institute of Technology </h4>
+                <p>
+                    • Represented institute in multiple company events  to develop institute-corporate relations.  
+                    <br>
+                    • Organized and generated funds for first ever Microsoft Hackathon and TedXConnect in the university along with various events throughout the year.
+                </p>
+            </div>    
+
+   
+<div id="experience">
         <h2 class="heading">Projects</h2>
         <div id="experience-timeline">
-            <div data-date="March 2018 – April 2018">
+
+            <div data-date="October 2018 – December 2018" class="background-alt">
+                <h3>Toxic Content Classification</h3>
+                <h4> Python, LSTM, Logistic Regression  <a href="https://github.com/Aayush1710/Toxic-Content-Classificaiton" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a> </h4>
+                <p>
+                    • Used kaggle dataset of over 150,000 comments to classify them in their toxicity nature i.e. if they have abusive language, insulting or represent negative sentiment.
+                    <br>
+                    • Built 5 models, 2 non-neural network models based on Logistic Regression and 3 Deep Learning models based on Bidirectional LSTM and used GloVe embeddings, TF-IDF tokenization for feature representation. 
+                </p>
+            </div>
+
+            <div data-date="October 2018 – November 2018" class="background-alt">
+                <h3>Memory Container Kernel Module</h3>
+                <h4> C, Linux Kernel, Paging  <a href="https://github.ncsu.edu/pnagori/CSC501_Container_Memory" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a> </h4>
+                <p>
+                    • Implemented a linux loadable kernel module which supports allocating memory locations and assign a task to a resource container. 
+                    <br>
+                    • Executed demand paging for container object mapping to memory & freeing memory on object deletion.
+                </p>
+            </div>
+
+            <div data-date="August 2018 – September 2018" class="background-alt">
+                <h3>Process Container Kernel Module</h3>
+                <h4> C, Linux Kernel, Scheduling  <a href="https://github.ncsu.edu/pnagori/CSC501_Container_Processor" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a> </h4>
+                <p>
+                    • Implemented a linux loadable kernel module which supported a process container creation, deletion and thread scheduling.
+                    <br>
+                    • Locks are used to gaurantee only one process can access a object at a time.
+                </p>
+            </div>
+
+            <div data-date="March 2018 – April 2018" class="background-alt">
                 <h3>Multi-Label Classification of Satellite Images using CNN</h3>
                 <h4>Python, CNN, Keras  <a href="https://github.com/Aayush1710/Conv-Nets-for-Multi-label-classification" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a> </h4>
                 <p>
@@ -260,7 +316,7 @@
                 </p>
             </div>
 
-            <div data-date="February 2018 – April 2018">
+            <div data-date="February 2018 – April 2018" class="background-alt">
                 <h3>Wolf Inns Hotel Management System</h3>
                 <h4>Java, SQL, MariaDB, JDBC   <a href="https://github.com/" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></h4>
                 <p>
@@ -270,7 +326,7 @@
                 </p>
             </div>
 
-            <div data-date="March 2018 – April 2018">
+            <div data-date="March 2018 – April 2018" class="background-alt">
                 <h3>OCR based Smart Shopping Android Application  </h3>
                 <h4>Java, Node.js, MongoDB, Google Cloud Vision API  <a href="https://github.com/Aayush1710/Smart-Shopping-List-App" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></h4>
                 <p>
@@ -280,7 +336,7 @@
                 </p>
             </div>
 
-            <div data-date="February 2018 – March 2018">
+            <div data-date="February 2018 – March 2018" class="background-alt">
                 <h3>Multi-Class Geospatial Object Detection </h3>
                 <h4>Python, Scikit, OpenCV, SVM   <a href="https://github.com/kira0992/Geospatial-Object-Detection-and-Image-Classification" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></h4>
                 <p>
@@ -293,7 +349,7 @@
                 </p>
             </div>
 
-            <div data-date="November 2017 – December 2017">
+            <div data-date="November 2017 – December 2017" class="background-alt">
                 <h3>NSF supported EXPERTIZA  </h3>
                 <h4>Ruby on Rails, MySQL,HTML, RSpec  <a href="https://github.com/Aayush1710/expertiza" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></h4>
                 <p>
@@ -305,7 +361,7 @@
                 </p>
             </div>
 
-            <div data-date="September 2017 – October 2017">
+            <div data-date="September 2017 – October 2017" class="background-alt">
                 <h3>Car Rental Web Application  </h3>
                 <h4>Ruby on Rails,HTML,CSS, Heroku, PGSQL  <a href="https://github.ncsu.edu/apatial/carrental" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a> </h4>
                 <p>
@@ -319,7 +375,7 @@
             </div>
 
 
-             <div data-date="January 2017 – May 2017">
+             <div data-date="January 2017 – May 2017" class="background-alt">
                 <h3>FIS based Autonomous Navigation System </h3>
                 <h4>MATLAB  <a href="https://github.com/Aayush1710/FIS-based-Autonomous-Navigation" target="_blank"><i class="fa fa-github" aria-hidden="true"> </i></a>   <a href="https://ieeexplore.ieee.org/document/8204164" target="_blank"><i class="fa fa-newspaper-o" aria-hidden="true"> </i></a></h4>
                 <p>
@@ -331,7 +387,7 @@
                 </p>
             </div>
 
-            <div data-date="October 2016 – November 2016">
+            <div data-date="October 2016 – November 2016" class="background-alt">
                 <h3>Speech Emotion Detection </h3>
                 <h4>MATLAB  <a href="https://github.com/Aayush1710/Speech-Emotion-Detection-using-Multiple-Neural-Networks" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></h4>
                 <p>
