Update content errors

--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
    
 <div id="experience">
         <h2 class="heading">Projects</h2>
-        <div id="experience-timeline">
+        <div id="projects-timeline">
 
             <div data-date="October 2018 – December 2018" class="background-alt">
                 <h3>Toxic Content Classification</h3>
