--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 
 
 
- <div id="education" class="background-alt">
+    <div id="education" class="background-alt">
         <h2 class="heading">Education</h2>
         <div class="education-block" style="background: #fff;">
             <h3>North Carolina State University</h3>
@@ -150,6 +150,42 @@
                     Completed coursework involving topics of object oriented programming, system programming and network security.
                 </li>
             </ul>
+        </div>
+        <!-- End .education-block -->
+    </div>
+    <!-- End #education -->
+
+
+
+    <div id="projects">
+        <h2 class="heading">Experience</h2>
+        <div class="education-block" style="background: #f2f2f5;">
+            <h3>Graduate Reasearch Assistant</h3>
+            <span class="education-date">August 2018 - December 2018</span>
+            <h4>North Carolina State University</h4>
+            <ul>
+                <li>
+                    Analysed MRI images of pediatric cancer subjects for features with a goal of developing a model to segment and localize tumor from the images.
+                </li>
+                <li>
+                    Studied the Facebook Detectron Model and Mask RCNN architecture for segmenting tumor from generated grayscale masks and regernate them on the MRI from the model.
+                </li>
+            </ul>
+        </div>
+        <!-- End .education-block -->
+
+        <div class="education-block" style="background: #f2f2f5;">
+            <h3>General Secretary</h3>
+            <span class="education-date">July 2015 - June 2016</span>
+            <h4> Sardar Patel Institute of Technology </h4>
+                <ul>
+                    <li>
+                        Represented institute in multiple company events  to develop institute-corporate relations.  
+                    </li>
+                    <li>
+                        Organized and generated funds for first ever Microsoft Hackathon and TedXConnect in the university along with various events throughout the year.
+                    </li>
+                </ul>
         </div>
         <!-- End .education-block -->
     </div>
@@ -245,31 +281,6 @@
     </div>
     <!-- End #skills -->
 
-<div id="projects" class="background-alt">
-        <h2 class="heading">Experience</h2>
-        <div id="projects-timeline">
-            
-            <div data-date="August 2018 – December 2018">
-                <h3>Graduate Reasearch Assistant</h3>
-                <h4> North Carolina State University </h4>
-                <p>
-                    • Analysed MRI images of pediatric cancer subjects for features with a goal of developing a model to segment and localize tumor from the images.
-                    <br>
-                    • Studied the Facebook Detectron Model and Mask RCNN architecture for segmenting tumor from generated grayscale masks and regernate them on the MRI from the model.
-                </p>
-            </div>
-
-            <div data-date="July 2015 – June 2016">
-                <h3>General Secretary</h3>
-                <h4> Sardar Patel Institute of Technology </h4>
-                <p>
-                    • Represented institute in multiple company events  to develop institute-corporate relations.  
-                    <br>
-                    • Organized and generated funds for first ever Microsoft Hackathon and TedXConnect in the university along with various events throughout the year.
-                </p>
-            </div>
-    </div>
-</div>    
 
    
 <div id="experience">
