--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 
 
 
-     <div id="skills">
+     <div id="skills" class="background-alt">
         <h2 class="heading">Skills</h2>
         <div class="row skillRow">
             <div class="col-md-3 skillTitle">
